--- a/ChurchApplication/app/build.gradle
+++ b/ChurchApplication/app/build.gradle
@@ -20,5 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile files('libs/android-support-v4.jar')
+    compile files('libs/google-api-client-1.20.0.jar')
 }
