--- a/ChurchApplication/app/src/main/AndroidManifest.xml
+++ b/ChurchApplication/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="church_application.rose_hulman.edu.churchapplication" >
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
