Created initial widget. No button to update.

--- a/ChurchApplication/app/src/main/AndroidManifest.xml
+++ b/ChurchApplication/app/src/main/AndroidManifest.xml
@@ -41,6 +41,18 @@
             android:label="Event Details" >
         </activity>
 
+        <receiver android:name=".MinistryWidgetProvider" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/widget_provider" />
+        </receiver>
+        <service android:name=".WidgetAnnouncementsService"
+        android:permission="android.permission.BIND_REMOTEVIEWS" />
+        <service android:name=".WidgetEventsService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
     </application>
 
 </manifest>
