--- a/ChurchApplication/app/build.gradle
+++ b/ChurchApplication/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 14
-    buildToolsVersion "22.0.1"
+    buildToolsVersion '21.1.2'
 
     defaultConfig {
         applicationId "church_application.rose_hulman.edu.churchapplication"
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/android-support-v4.jar')
     compile files('libs/google-api-client-1.20.0.jar')
 }
