--- a/ChurchApplication/app/src/main/AndroidManifest.xml
+++ b/ChurchApplication/app/src/main/AndroidManifest.xml
@@ -3,12 +3,14 @@
     package="church_application.rose_hulman.edu.churchapplication" >
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/unhindered_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <receiver android:name=".AlarmReciever"/>
         <activity
             android:name=".HomeActivity"
             android:label="@string/app_name" >
